# orchids

./: .gitignore
backend/: .env  pyproject.toml  requirements.txt
backend/app/: main.py  website_cloner.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/ui/: tabs.tsx
