[project]
name = "backend"
version = "0.1.0"
description = "UI Cloning Backend Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "uvicorn>=0.27.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.0.1",
    "selenium>=4.17.2",
    "cloudscraper>=1.2.71",
    "webdriver-manager>=4.0.1",
    "lxml>=5.1.0"
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
